--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -173,3 +173,44 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: #4b5563;
 }
+
+.ss-light2 {
+  filter: blur(24.5px);
+  mix-blend-mode: lighten;
+  opacity: 0.3;
+  background: radial-gradient(50% 50%, #7d7d7d 0%, #ff961f66 100%);
+}
+
+.ss-light3 {
+  filter: blur(40.5px);
+  mix-blend-mode: lighten;
+  opacity: 0.8;
+  background: radial-gradient(50% 50%, #7d7d7d 0%, #ff961f66 100%);
+}
+
+.ss-light4 {
+  filter: blur(7px);
+  mix-blend-mode: lighten;
+  opacity: 0.2;
+  background: radial-gradient(50% 50%, #fff 0%, #fff6 100%);
+}
+
+.ss-light5 {
+  filter: blur(12px);
+  mix-blend-mode: lighten;
+  opacity: 0.8;
+  background: radial-gradient(50% 50%, #fff 0%, #fff6 100%);
+}
+
+.ss-light6 {
+  filter: blur(); /* missing value in original, keep as-is or add value */
+  mix-blend-mode: lighten;
+  background: radial-gradient(50% 50%, #fff 0%, #c7ffee00 100%);
+}
+
+.ss-light7 {
+  filter: blur(135px);
+  mix-blend-mode: lighten;
+  opacity: 0.1;
+  background-color: #b8b8b8;
+}
